# journal-comvi

./: CMakeLists.txt  ReadMe.md  local_journal_reader.cpp  local_journal_reader.h  main.cpp  ncurses.cpp  ncurses.h  outputter.cpp  outputter.h  remote_journal_reader.cpp  remote_journal_reader.h
